# yt_morning

./: README.md  pyproject.toml
src/ytbrief/: cli.py  gemini_client.py  logic.py  notion_client.py  requests_compat.py  schemas.py  storage.py  youtube_client.py
tests/: test_date_window.py  test_notion_upsert_mock.py  test_sqlite_upsert.py
