[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytbrief"
version = "0.1.0"
description = "Daily YouTube market brief pipeline with Gemini and Notion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
]

[project.scripts]
ytbrief = "ytbrief.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
